test app (wrap); app.config load from wrap/config/app.config

--- a/src/Inceptum.AppServer/Inceptum.AppServer.csproj
+++ b/src/Inceptum.AppServer/Inceptum.AppServer.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppDiscovery\FolderApplicationBrowser.cs" />
+    <Compile Include="AppDiscovery\Openwrap\AppConfigExporter.cs" />
     <Compile Include="AppDiscovery\Openwrap\HostedApplicationExport.cs" />
     <Compile Include="AppDiscovery\Openwrap\IHostedApplicationExport.cs" />
     <Compile Include="AppDiscovery\Openwrap\NativeDllExporter.cs" />
@@ -113,6 +114,15 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Configuration\AppServer\server.host">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Configuration\AppServer\server.transports">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Configuration\TestApp\test">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="nlog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
@@ -132,9 +142,7 @@
       <Name>Inceptum.AppServer.Sdk</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Configuration\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="..\..\wraps\openwrap\build\OpenWrap.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
