--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -18,11 +18,11 @@
 			<target name="logfile" xsi:type="File" autoFlush="true" encoding="utf-8" fileName="${logfolder}\${shortdate}.diasoft.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
 		<target name="asyncConsole" xsi:type="AsyncWrapper">
-			<target name="console" xsi:type="Console" layout="${date:format=HH\:mm\:ss.fff} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+			<target name="console" xsi:type="Console" layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
 
 		<target name="asyncDebug" xsi:type="AsyncWrapper">
-			<target name="debug" xsi:type="Debug" layout="${date:format=HH\:mm\:ss.fff} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+			<target name="debug" xsi:type="Debug" layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
 
 		<target name="null" xsi:type="Null" />
