--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true">
+<!--
 	<variable name="logfolder" value="${basedir}\logs\${app_domain:DefaultAppDomainAlias=server}\" />
+-->
+	<variable name="logfolder" value="${gdc:item=logfolder}" />
 
 	<targets>
 		<target name="asyncFileWriter" xsi:type="AsyncWrapper">
@@ -20,6 +23,7 @@
 		<target name="asyncConsole" xsi:type="AsyncWrapper">
 			<target name="console" xsi:type="Console" layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
+    
 
 		<target name="asyncDebug" xsi:type="AsyncWrapper">
 			<target name="debug" xsi:type="Debug" layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
