configurations page on UI (not finished)

--- a/src/Inceptum.AppServer.Configuration/Inceptum.AppServer.Configuration.csproj
+++ b/src/Inceptum.AppServer.Configuration/Inceptum.AppServer.Configuration.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigurationService.cs" />
+    <Compile Include="IManageableConfigurationProvider.cs" />
     <Compile Include="Json\JsonContentProcessor.cs" />
     <Compile Include="Model\Bundle.cs" />
     <Compile Include="Model\BundleCollectionBase.cs" />
