--- a/src/Inceptum.AppServer.Tests/Inceptum.AppServer.Tests.csproj
+++ b/src/Inceptum.AppServer.Tests/Inceptum.AppServer.Tests.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\ComponentRegistrationExtentionsTests.cs" />
+    <Compile Include="Configuration\ConfigTests.cs" />
     <Compile Include="Configuration\ConfigurationFacilityTests.cs" />
     <Compile Include="Configuration\ConfigurationProviderTests.cs" />
     <Compile Include="Configuration\DependsOnEndpointsTests.cs" />
