--- a/src/Inceptum.AppServer.Management2/Inceptum.AppServer.Management2.csproj
+++ b/src/Inceptum.AppServer.Management2/Inceptum.AppServer.Management2.csproj
@@ -40,6 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\VersionInfo.cs">
+      <Link>Properties\VersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Handlers\ApplicationsHandler.cs" />
     <Compile Include="Handlers\ConfigurationsHandler.cs" />
     <Compile Include="Handlers\HostHandler.cs" />
