--- a/src/Inceptum.AppServer.Sdk/Inceptum.AppServer.Sdk.csproj
+++ b/src/Inceptum.AppServer.Sdk/Inceptum.AppServer.Sdk.csproj
@@ -43,6 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\VersionInfo.cs">
+      <Link>Properties\VersionInfo.cs</Link>
+    </Compile>
     <Compile Include="AppInfo.cs" />
     <Compile Include="Configuration\BundleNotFoundException.cs" />
     <Compile Include="HostedAppStatus.cs" />
