--- a/src/Inceptum.AppServer/Inceptum.AppServer.csproj
+++ b/src/Inceptum.AppServer/Inceptum.AppServer.csproj
@@ -157,7 +157,7 @@
       <Project>{CDA6F8B1-546B-4D98-8B09-8297DB3CAD9F}</Project>
       <Name>Inceptum.AppServer.Configuration</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Inceptum.AppServer.Management2\Inceptum.AppServer.Management.csproj">
+    <ProjectReference Include="..\Inceptum.AppServer.Management\Inceptum.AppServer.Management.csproj">
       <Project>{0F7D48A2-BAA8-4FCF-AA11-FFEA5891ED27}</Project>
       <Name>Inceptum.AppServer.Management</Name>
     </ProjectReference>
