--- a/src/Inceptum.AppServer/app.config
+++ b/src/Inceptum.AppServer/app.config
@@ -1,16 +1,36 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
   <appSettings>
-    <add key="Environment" value="dev"/>
+    <add key="Environment" value="dev" />
     <!--<add key="confSvcUrl" value="http://msa-ibdev1.office.finam.ru:8282/configurations"/>-->
   </appSettings>
   <!--We need it for WebServices behind proxy to be accessed -->
   <system.net>
     <defaultProxy useDefaultCredentials="true">
-      <proxy autoDetect="True" bypassonlocal="True"/>
+      <proxy autoDetect="True" bypassonlocal="True" />
     </defaultProxy>
   </system.net>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Castle.Windsor" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Castle.Core" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="protobuf-net" publicKeyToken="257b51d87d2e4d67" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.621" newVersion="2.0.0.621" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Mono.Cecil" publicKeyToken="0738eb9f132ed756" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.9.5.0" newVersion="0.9.5.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
