--- a/src/Inceptum.AppServer.Configuration/packages.config
+++ b/src/Inceptum.AppServer.Configuration/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.2.0" targetFramework="net40" />
+  <package id="Castle.Windsor" version="3.2.0" targetFramework="net40" />
+  <package id="Inceptum.Core" version="1.0.5.18" targetFramework="net40" />
+  <package id="Inceptum.DataBus" version="1.0.5.18" targetFramework="net40" />
+  <package id="Inceptum.Messaging" version="1.0.5.18" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
 </packages>
