--- a/src/Inceptum.AppServer/packages.config
+++ b/src/Inceptum.AppServer/packages.config
@@ -4,6 +4,9 @@
   <package id="Castle.Core-NLog" version="3.2.0" targetFramework="net40" />
   <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.0" targetFramework="net40" />
+  <package id="Inceptum.Core" version="1.0.5.18" targetFramework="net40" />
+  <package id="Inceptum.DataBus" version="1.0.5.18" targetFramework="net40" />
+  <package id="Inceptum.Messaging" version="1.0.5.18" targetFramework="net40" />
   <package id="Mono.Cecil" version="0.9.5.4" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
