--- a/src/Inceptum.AppServer/Inceptum.AppServer.csproj
+++ b/src/Inceptum.AppServer/Inceptum.AppServer.csproj
@@ -72,7 +72,7 @@
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>inceptum.ico</ApplicationIcon>
+    <ApplicationIcon>inceptumsoft.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="antlr.runtime">
@@ -283,6 +283,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="inceptum.ico" />
+    <Content Include="inceptumsoft.ico" />
+    <Content Include="ISlogo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
