--- a/src/Inceptum.AppServer.Tests/packages.config
+++ b/src/Inceptum.AppServer.Tests/packages.config
@@ -2,12 +2,12 @@
 <packages>
   <package id="Castle.Core" version="3.2.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.0" targetFramework="net40" />
-  <package id="Inceptum.Core" version="1.0.5.18" targetFramework="net40" />
-  <package id="Inceptum.DataBus" version="1.0.5.18" targetFramework="net40" />
-  <package id="Inceptum.Messaging" version="1.0.5.18" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="Inceptum.DataBus" version="1.0.5.68" targetFramework="net40" />
+  <package id="Inceptum.Messaging" version="1.0.5.68" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
+  <package id="protobuf-net" version="2.0.0.640" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
   <package id="Rx-Core" version="2.1.30214.0" targetFramework="net40" />
   <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="net40" />
