--- a/src/Inceptum.AppServer/packages.config
+++ b/src/Inceptum.AppServer/packages.config
@@ -4,13 +4,12 @@
   <package id="Castle.Core-NLog" version="3.2.0" targetFramework="net40" />
   <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.0" targetFramework="net40" />
-  <package id="Inceptum.Core" version="1.0.5.18" targetFramework="net40" />
-  <package id="Inceptum.DataBus" version="1.0.5.18" targetFramework="net40" />
-  <package id="Inceptum.Messaging" version="1.0.5.18" targetFramework="net40" />
+  <package id="Inceptum.Messaging" version="1.0.5.68" targetFramework="net40" />
   <package id="Mono.Cecil" version="0.9.5.4" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
   <package id="Nuget.Core" version="2.2.0" targetFramework="net40" />
+  <package id="protobuf-net" version="2.0.0.640" targetFramework="net40" />
   <package id="Rx-Core" version="2.1.30214.0" targetFramework="net40" />
   <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="net40" />
   <package id="Rx-Linq" version="2.1.30214.0" targetFramework="net40" />
