--- a/src/Inceptum.AppServer.Management/Inceptum.AppServer.Management.csproj
+++ b/src/Inceptum.AppServer.Management/Inceptum.AppServer.Management.csproj
@@ -141,8 +141,6 @@
     <EmbeddedResource Include="Content\js\libs\jquery.fileupload.js" />
     <EmbeddedResource Include="Content\js\libs\jquery.iframe-transport.js" />
     <EmbeddedResource Include="Content\js\libs\jquery.scrollTo-min.js" />
-    <EmbeddedResource Include="Content\js\libs\jquery.signalR-0.5.3.js" />
-    <EmbeddedResource Include="Content\js\libs\jquery.signalR-0.5.3.min.js" />
     <EmbeddedResource Include="Content\js\libs\jquery.ui.widget.js" />
     <EmbeddedResource Include="Content\js\libs\json2.js" />
     <EmbeddedResource Include="Content\js\libs\json2.min.js" />
@@ -194,6 +192,15 @@
     <EmbeddedResource Include="Content\js\views\serverSideBar.js" />
     <EmbeddedResource Include="Content\js\views\serverStatus.js" />
     <EmbeddedResource Include="Content\robots.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\js\libs\jquery.signalR-1.1.2.js" />
+    <EmbeddedResource Include="Content\js\libs\jquery.signalR-1.1.2.min.js" />
+    <Content Include="Scripts\jquery-1.6.4-vsdoc.js" />
+    <Content Include="Scripts\jquery-1.6.4.js" />
+    <Content Include="Scripts\jquery-1.6.4.min.js" />
+    <Content Include="Scripts\jquery.signalR-1.1.2.js" />
+    <Content Include="Scripts\jquery.signalR-1.1.2.min.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
