--- a/src/Inceptum.AppServer.Management/packages.config
+++ b/src/Inceptum.AppServer.Management/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Castle.Core" version="3.2.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.0" targetFramework="net40" />
+  <package id="jQuery" version="1.6.4" targetFramework="net40" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="1.1.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
 </packages>
