--- a/src/Inceptum.AppServer/packages.config
+++ b/src/Inceptum.AppServer/packages.config
@@ -5,10 +5,15 @@
   <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.0" targetFramework="net40" />
   <package id="Inceptum.Messaging" version="1.0.5.68" targetFramework="net40" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.2" targetFramework="net40" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.2" targetFramework="net40" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="0.21.0-pre" targetFramework="net40" />
+  <package id="Microsoft.Owin.Hosting" version="0.21.0-pre" targetFramework="net40" />
   <package id="Mono.Cecil" version="0.9.5.4" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
   <package id="Nuget.Core" version="2.2.0" targetFramework="net40" />
+  <package id="Owin" version="1.0" targetFramework="net40" />
   <package id="protobuf-net" version="2.0.0.640" targetFramework="net40" />
   <package id="Rx-Core" version="2.1.30214.0" targetFramework="net40" />
   <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="net40" />
@@ -16,7 +21,4 @@
   <package id="Rx-Main" version="2.1.30214.0" targetFramework="net40" />
   <package id="Rx-PlatformServices" version="2.1.30214.0" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
-  <package id="SignalR.Hosting.Common" version="0.5.84-rc" targetFramework="net40" />
-  <package id="SignalR.Hosting.Self" version="0.5.84-rc" targetFramework="net40" />
-  <package id="SignalR.Server" version="0.5.84-rc" targetFramework="net40" />
 </packages>
