Process per plugin (incomplete)

--- a/src/Inceptum.AppServer.Initializer/Inceptum.AppServer.Initializer.csproj
+++ b/src/Inceptum.AppServer.Initializer/Inceptum.AppServer.Initializer.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D9E93ACD-AE23-423D-A48A-81A7AA2DDC0A}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Inceptum.AppServer.Initializer</RootNamespace>
     <AssemblyName>Inceptum.AppServer.Initializer</AssemblyName>
@@ -30,9 +30,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Inceptum.AppServer.Initializer.Application</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppDomainInitializer.cs" />
+    <Compile Include="Application.cs" />
+    <Compile Include="IApplicationInstance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
